--- a/init.org
+++ b/init.org
@@ -2158,15 +2158,66 @@ I have my own little hook to open the flycheck buffer with ~M-C~, and close it a
 #+end_src
 ** Flymake
 #+begin_src emacs-lisp :load yes
-(defun my-python-mode-setup ()
-  "Setup function for Python mode."
-  (interactive)
-  (flymake-mode 1)
-  (flymake-ruff-load)
-  )
-(use-package flymake :ensure t :defer t)
-(use-package flymake-ruff :ensure t :after flymake :defer t)
-(add-hook 'python-ts-mode-hook #'my-python-mode-setup t)
+(use-package flymake :ensure t)
+(use-package flymake-ruff :ensure t :config (flymake-ruff-load))
+(defun flymake-ruff--check-buffer ()
+  "Generate a list of diagnostics for the current buffer."
+  (let ((code-buffer (current-buffer))
+        (start-line (line-number-at-pos (point-min) t))
+        (code-content
+         (without-restriction
+           (buffer-substring-no-properties (point-min) (point-max))))
+        (dxs '()))
+    (with-temp-buffer
+      (insert code-content)
+      (let* ((config
+              (and (project-current)
+                   (seq-find
+                    #'file-readable-p
+                    (mapcar
+                     (lambda (f)
+                       (expand-file-name
+                        f
+                        (project-root (project-current))))
+                     flymake-ruff--default-configs))))
+             (args
+              (if config
+                  (append
+                   (list "check" "--config" config)
+                   flymake-ruff-program-args)
+                (cons "check" flymake-ruff-program-args))))
+        (apply #'call-process-region
+               (point-min)
+               (point-max)
+               flymake-ruff-program
+               t
+               t
+               nil
+               args))
+      (goto-char (point-min))
+      (while (search-forward-regexp flymake-ruff--output-regex
+                                    (point-max)
+                                    t)
+        (when (match-string 2)
+          (let* ((line (string-to-number (match-string 2)))
+                 (col (string-to-number (match-string 3)))
+                 (code (match-string 4))
+                 (msg (match-string 5))
+                 (description (format "Ruff: %s %s" code msg))
+                 (region
+                  (flymake-diag-region
+                   code-buffer (1+ (- line start-line)) col))
+                 (dx
+                  (flymake-make-diagnostic
+                   code-buffer
+                   (car region)
+                   (cdr region)
+                   :error description)))
+            (add-to-list 'dxs dx)))))
+    dxs))
+(setq flymake-ruff-program-args
+      '("--output-format" "concise" "--exit-zero" "--quiet" "-"))
+(add-hook 'python-ts-mode-hook 'flymake-mode)
 #+end_src
 * TRAMP
 ** General Settings
